# tritonbench

./: .gitignore  .gitmodules  .pre-commit-config.yaml  1.txt  CONTRIBUTING  README.md  install.py  kernel_configs.json  proton.hatchet  pyproject.toml  requirements.txt  requirements_numpy.txt  run.py  test.py
.ci/docker/: build_rocm.sh
.ci/gpu/: reset-gcp-h100.sh  tune-gcp-h100.sh
.ci/scribe/: upload.py
.ci/test_infra/: oss_ci_benchmark_v3.py
.ci/triton/: compile.sh
.ci/tritonbench/: install-pytorch-source.sh  install-triton-evo.sh  install-triton-main.sh  install-triton-nightly.sh  install-triton-ptx.sh  install.sh  run-benchmark.sh  test-cpu.sh  test-gpu.sh  test-install.sh  test-nightly-h100.sh  test-nightly.sh  test-operators.sh  triton-evo.patch  triton-ptxas.patch
.ci/upload/: s3.py  scribe.py
.github/workflows/: _linux-benchmark-abtest-h100.yml  _linux-benchmark-h100.yml  _linux-nightly-h100.yml  _linux-test-h100.yml  compile-time.yaml  docker-rocm.yaml  docker.yaml  linter.yaml  nightly.yml  pr.yaml
benchmarks/: README.md  utils.py
benchmarks/compile_time/: run.py
cache/: jagged_sum_configs.json
docker/: entrypoint.sh  gcp-a100-runner-dind.dockerfile  gcp-base-image.dockerfile  tritonbench-nightly.dockerfile  tritonbench-rocm-nightly.dockerfile
docs/: install.md  kineto_trace.md  metrics.md
test/: __init__.py
tools/: cuda_builder.py  cuda_utils.py  git_utils.py  python_utils.py  rocm_utils.py  torch_utils.py
tools/tk/: tk.patch  (+1 more)
tritonbench/: __init__.py  pyproject.toml  setup.py
utils/: cuda_utils.py  git_utils.py  python_utils.py
(+224 files in other folders)
